test/input/invalid/assign_4.js
console.log(4 || (null = 4));
